Fix site layout bugs

--- a/nushsdyc/static/css/style.css
+++ b/nushsdyc/static/css/style.css
@@ -5,9 +5,12 @@
  *
  * Made By MaterializeCSS.com
  */
+#sidenav-overlay {
+  z-index: 996;
+}
 
 #index-banner {
-  height: calc(100vh - 64px);
+  /*height: calc(100vh - 64px);*/
   width: 100%;
 }
 
@@ -16,7 +19,7 @@
   width: 100%;
   left: 0;
   top: 0;
-  z-index: 100;
+  z-index: 997;
   border-top: 0;
 }
 
